fix: 修复 layout 中 bg z-index 导致的显示不正常问题

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -53,7 +53,6 @@ page {
 
   & > .bg {
     @include m-position(fixed);
-    @include m-z-index(-99);
     @include m-sizing-square(100%);
   }
 
